--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -36,5 +36,5 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           push: true
-          platforms: linux/amd64,linux/arm64,linux/386
+          platforms: linux/amd64,linux/arm64
           tags: ryanshaw/cf-ddns:latest
